force-app/main/default/objects/RTV_DEF_Summary__c/RTV_DEF_Summary__c.object-meta.xml
<CustomObject>
    <description>Defective Summary</description>
    <label>RTV DEF Summary</label>
    <nameField>
        <label>Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV DEF Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>