force-app/main/default/objects/RTV_DEF_Summary__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Group</label>
    <referenceTo>RMS_Account_Group__c</referenceTo>
    <relationshipLabel>RTV DEF Summary</relationshipLabel>
    <relationshipName>RTV_DEF_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>