force-app/main/default/objects/RTV_DEF_Summary__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <description>活跃中(可新增Order)的状态</description>
    <inlineHelpText>WSL User can add DEF Order only when &quot;Opening&quot;</inlineHelpText>
    <label>Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Start</fullName>
                <default>true</default>
                <label>Not Start</label>
            </value>
            <value>
                <fullName>Opening</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>