force-app/main/default/objects/RTV_DEF_Summary__c/fields/Apply_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Close_Date__c</fullName>
    <description>关闭Summary的日期</description>
    <inlineHelpText>Date to close the summary.</inlineHelpText>
    <label>Apply Close Date</label>
    <type>Date</type>
</CustomField>