force-app/main/default/objects/RTV_DEF_Summary__c/fields/Apply_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Apply_Open_Date__c</fullName>
    <description>申请残次的关闭日期</description>
    <inlineHelpText>Date of close application.</inlineHelpText>
    <label>Apply Open Date</label>
    <type>Date</type>
</CustomField>