force-app/main/default/objects/RTV_DEF_Summary__c/fields/Asian_Size__c.field-meta.xml
<CustomField>
    <fullName>Asian_Size__c</fullName>
    <description>SAP CSV</description>
    <label>Asian Size</label>
    <length>1</length>
    <type>Text</type>
</CustomField>