force-app/main/default/objects/RTV_DEF_Summary__c/fields/Attach_User__c.field-meta.xml
<CustomField>
    <fullName>Attach_User__c</fullName>
    <label>Attach User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>