force-app/main/default/objects/RTV_DEF_Summary__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>SAP CSV</description>
    <label>BU</label>
    <length>1</length>
    <type>Text</type>
</CustomField>