force-app/main/default/objects/RTV_DEF_Summary__c/fields/Condition_type__c.field-meta.xml
<CustomField>
    <fullName>Condition_type__c</fullName>
    <defaultValue>&apos;ZDSI&apos;</defaultValue>
    <description>SAP CSV</description>
    <label>Condition_type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>