force-app/main/default/objects/RTV_DEF_Summary__c/fields/Condition_Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value_Currency__c</fullName>
    <defaultValue>&apos;CNY&apos;</defaultValue>
    <description>SAP CSV</description>
    <label>Condition_Value_Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>