force-app/main/default/objects/RTV_DEF_Summary__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>SAP CSV</description>
    <label>Contract Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>