force-app/main/default/objects/RTV_DEF_Summary__c/fields/CS_Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Inbound_Date__c</fullName>
    <description>CS入库日期</description>
    <label>CS Inbound Date</label>
    <type>Date</type>
</CustomField>