force-app/main/default/objects/RTV_DEF_Summary__c/fields/Date_Of_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Inspected__c</fullName>
    <label>Date Of Inspected</label>
    <type>Date</type>
</CustomField>