force-app/main/default/objects/RTV_DEF_Summary__c/fields/Date_Of_Post_To_LF__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Post_To_LF__c</fullName>
    <label>Date Of Post To LF</label>
    <type>Date</type>
</CustomField>