force-app/main/default/objects/RTV_DEF_Summary__c/fields/Date_Of_WSL_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_WSL_Confirm__c</fullName>
    <label>Date Of WSL Confirm</label>
    <type>Date</type>
</CustomField>