force-app/main/default/objects/RTV_DEF_Summary__c/fields/Default_CFS_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Default_CFS_OwnerId__c</fullName>
    <formula>Account_Group__r.CFS_Owner__c</formula>
    <label>Default CFS OwnerId</label>
    <type>Text</type>
</CustomField>