force-app/main/default/objects/RTV_DEF_Summary__c/fields/Default_Digital_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Default_Digital_OwnerId__c</fullName>
    <formula>Account_Group__r.Digital_Owner__c</formula>
    <label>Default Digital OwnerId</label>
    <type>Text</type>
</CustomField>