force-app/main/default/objects/RTV_DEF_Summary__c/fields/DTC_Type__c.field-meta.xml
<CustomField>
    <fullName>DTC_Type__c</fullName>
    <label>DTC Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>DIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>