force-app/main/default/objects/RTV_DEF_Summary__c/fields/Insp_CS_Reject_Time__c.field-meta.xml
<CustomField>
    <fullName>Insp_CS_Reject_Time__c</fullName>
    <description>CS打回审批的时间</description>
    <label>Insp CS Reject Time</label>
    <type>DateTime</type>
</CustomField>