force-app/main/default/objects/RTV_DEF_Summary__c/fields/LF_DELY_Inbound_Comment__c.field-meta.xml
<CustomField>
    <fullName>LF_DELY_Inbound_Comment__c</fullName>
    <label>LF DELY Inbound Comment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>