force-app/main/default/objects/RTV_DEF_Summary__c/fields/LF_WH_Inbound_Comment__c.field-meta.xml
<CustomField>
    <fullName>LF_WH_Inbound_Comment__c</fullName>
    <label>LF WH Inbound Comment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>