force-app/main/default/objects/RTV_DEF_Summary__c/fields/Retail_Value__c.field-meta.xml
<CustomField>
    <fullName>Retail_Value__c</fullName>
    <description>SAP CSV</description>
    <label>Retail Value</label>
    <length>1</length>
    <type>Text</type>
</CustomField>