force-app/main/default/objects/RTV_DEF_Summary__c/fields/Return_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason_Code__c</fullName>
    <defaultValue>&apos;220&apos;</defaultValue>
    <description>SAP CSV</description>
    <label>Return_Reason_Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>