force-app/main/default/objects/RTV_DEF_Summary__c/fields/TakeBack_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>TakeBack_Till_Date__c</fullName>
    <description>召回过程中获取D品的日期范围</description>
    <inlineHelpText>Date range for get level(D) in the takeback process</inlineHelpText>
    <label>TakeBack Till Date</label>
    <type>Date</type>
</CustomField>