force-app/main/default/objects/RTV_DEF_Summary__c/fields/UPC__c.field-meta.xml
<CustomField>
    <fullName>UPC__c</fullName>
    <description>SAP CSV</description>
    <label>UPC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>