force-app/main/default/objects/RTV_DEF_Summary__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <description>PS：因为Number字段类型会显示千分符，所以选Text类型</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>