force-app/main/default/objects/RTV_DEF_Summary__c/recordTypes/DTC.recordType-meta.xml
<RecordType>
    <fullName>DTC</fullName>
    <active>true</active>
    <description>DTC Defective</description>
    <label>DTC</label>
</RecordType>