force-app/main/default/objects/RTV_DEF_Summary__c/validationRules/NotChangeName.validationRule-meta.xml
<ValidationRule>
    <fullName>NotChangeName</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; (
 ISCHANGED(Name) ||
 ISCHANGED(Year__c) ||
 ISCHANGED(Month__c)
)</errorConditionFormula>
    <errorDisplayField>Account_Group__c</errorDisplayField>
    <errorMessage>Please do not change [Name] [Year] [Month]</errorMessage>
</ValidationRule>