force-app/main/default/objects/RTV_DEF_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Group__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Status__c</columns>
    <columns>Active_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <roleAndSubordinates>RMS_Converse</roleAndSubordinates>
        <roleAndSubordinates>RMS_IDC_LF</roleAndSubordinates>
        <roleAndSubordinates>RMS_WSL</roleAndSubordinates>
    </sharedTo>
</ListView>