force-app/main/default/objects/RTV_DEF_Summary__c/listViews/InProcess.listView-meta.xml
<ListView>
    <fullName>InProcess</fullName>
    <columns>NAME</columns>
    <columns>Account_Group__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Status__c</columns>
    <columns>Active_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <label>处理中...</label>
</ListView>